--- a/exercise1/plots/plots.ipynb
+++ b/exercise1/plots/plots.ipynb
@@ -140,6 +140,16 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save data to csv\n",
+    "df.to_csv('../results/bcast_bintree_results_wu_1.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
