Some minor mods

--- a/exercise1/plots/plots.ipynb
+++ b/exercise1/plots/plots.ipynb
@@ -148,7 +148,9 @@
    "outputs": [],
    "source": [
     "# save data to csv\n",
-    "df.to_csv('../results/bcast_bintree_results_wu_1.csv', index=False)"
+    "df2 = pd.read_csv('../results/bcast_bintree_results_wu_1.csv')\n",
+    "df.to_csv('../results/bcast_bintree_results_wu_1.csv', index=False)\n",
+    "df2.to_csv('../results/bcast_bintree_results_wu.csv', index=False)"
    ]
   }
  ],
