First part of report1

--- a/exercise1/plots/plots_bcast.ipynb
+++ b/exercise1/plots/plots_bcast.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -61,44 +61,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2863</th>\n",
+       "      <th>2287</th>\n",
        "      <td>bin_tree</td>\n",
-       "      <td>node</td>\n",
-       "      <td>240</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>192</td>\n",
        "      <td>128</td>\n",
-       "      <td>10.77</td>\n",
+       "      <td>35.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2864</th>\n",
+       "      <th>2288</th>\n",
        "      <td>bin_tree</td>\n",
-       "      <td>node</td>\n",
-       "      <td>240</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>192</td>\n",
        "      <td>256</td>\n",
-       "      <td>11.66</td>\n",
+       "      <td>753.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2865</th>\n",
+       "      <th>2289</th>\n",
        "      <td>bin_tree</td>\n",
-       "      <td>node</td>\n",
-       "      <td>240</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>192</td>\n",
        "      <td>512</td>\n",
-       "      <td>13.47</td>\n",
+       "      <td>10.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2866</th>\n",
+       "      <th>2290</th>\n",
        "      <td>bin_tree</td>\n",
-       "      <td>node</td>\n",
-       "      <td>240</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>192</td>\n",
        "      <td>1024</td>\n",
-       "      <td>14.39</td>\n",
+       "      <td>29.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2867</th>\n",
+       "      <th>2291</th>\n",
        "      <td>bin_tree</td>\n",
-       "      <td>node</td>\n",
-       "      <td>240</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>192</td>\n",
        "      <td>2048</td>\n",
-       "      <td>16.75</td>\n",
+       "      <td>104.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -106,14 +106,14 @@
       ],
       "text/plain": [
        "     Algorithm Allocation  Processes  MessageSize  Avg Latency(us)\n",
-       "2863  bin_tree       node        240          128            10.77\n",
-       "2864  bin_tree       node        240          256            11.66\n",
-       "2865  bin_tree       node        240          512            13.47\n",
-       "2866  bin_tree       node        240         1024            14.39\n",
-       "2867  bin_tree       node        240         2048            16.75"
+       "2287  bin_tree     socket        192          128            35.83\n",
+       "2288  bin_tree     socket        192          256           753.37\n",
+       "2289  bin_tree     socket        192          512            10.56\n",
+       "2290  bin_tree     socket        192         1024            29.13\n",
+       "2291  bin_tree     socket        192         2048           104.01"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,8 @@
     "bin_tree = pd.concat([bin_tree_core, bin_tree_socket, bin_tree_node])\n",
     "\n",
     "bin_tree.head()\n",
-    "bin_tree.tail()"
+    "bin_tree.tail()\n",
+    "bin_tree_socket.tail()"
    ]
   },
   {
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -214,59 +215,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2083</th>\n",
        "      <td>chain</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>175</td>\n",
+       "      <td>128</td>\n",
+       "      <td>42.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2084</th>\n",
        "      <td>chain</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>175</td>\n",
+       "      <td>256</td>\n",
+       "      <td>51.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>2085</th>\n",
        "      <td>chain</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>175</td>\n",
+       "      <td>512</td>\n",
+       "      <td>40.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2086</th>\n",
        "      <td>chain</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>175</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>102.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2087</th>\n",
        "      <td>chain</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>175</td>\n",
+       "      <td>2048</td>\n",
+       "      <td>119.71</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Algorithm Allocation  Processes  MessageSize  Avg Latency(us)\n",
-       "0     chain       core          2            1             0.16\n",
-       "1     chain       core          2            2             0.15\n",
-       "2     chain       core          2            4             0.15\n",
-       "3     chain       core          2            8             0.15\n",
-       "4     chain       core          2           16             0.15"
+       "     Algorithm Allocation  Processes  MessageSize  Avg Latency(us)\n",
+       "2083     chain     socket        175          128            42.40\n",
+       "2084     chain     socket        175          256            51.73\n",
+       "2085     chain     socket        175          512            40.37\n",
+       "2086     chain     socket        175         1024           102.27\n",
+       "2087     chain     socket        175         2048           119.71"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +280,9 @@
     "# Merge the data\n",
     "chain = pd.concat([chain_core, chain_socket, chain_node])\n",
     "\n",
-    "chain.head()"
+    "chain.head()\n",
+    "chain.tail()\n",
+    "chain_socket.tail()"
    ]
   },
   {
@@ -332,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -365,59 +368,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2575</th>\n",
        "      <td>linear</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>216</td>\n",
+       "      <td>128</td>\n",
+       "      <td>76.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2576</th>\n",
        "      <td>linear</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.14</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>216</td>\n",
+       "      <td>256</td>\n",
+       "      <td>80.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>2577</th>\n",
        "      <td>linear</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.14</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>216</td>\n",
+       "      <td>512</td>\n",
+       "      <td>79.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2578</th>\n",
        "      <td>linear</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.14</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>216</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>83.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2579</th>\n",
        "      <td>linear</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>216</td>\n",
+       "      <td>2048</td>\n",
+       "      <td>126.91</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Algorithm Allocation  Processes  MessageSize  Avg Latency(us)\n",
-       "0    linear       core          2            1             0.13\n",
-       "1    linear       core          2            2             0.14\n",
-       "2    linear       core          2            4             0.14\n",
-       "3    linear       core          2            8             0.14\n",
-       "4    linear       core          2           16             0.13"
+       "     Algorithm Allocation  Processes  MessageSize  Avg Latency(us)\n",
+       "2575    linear     socket        216          128            76.16\n",
+       "2576    linear     socket        216          256            80.89\n",
+       "2577    linear     socket        216          512            79.37\n",
+       "2578    linear     socket        216         1024            83.10\n",
+       "2579    linear     socket        216         2048           126.91"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +433,9 @@
     "# Merge the data\n",
     "linear = pd.concat([linear_core, linear_socket, linear_node])\n",
     "\n",
-    "linear.head()"
+    "linear.head()\n",
+    "linear.tail()\n",
+    "linear_socket.tail()"
    ]
   },
   {
@@ -483,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -516,59 +521,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1687</th>\n",
        "      <td>default</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>142</td>\n",
+       "      <td>128</td>\n",
+       "      <td>6037.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>1688</th>\n",
        "      <td>default</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>142</td>\n",
+       "      <td>256</td>\n",
+       "      <td>7.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1689</th>\n",
        "      <td>default</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>142</td>\n",
+       "      <td>512</td>\n",
+       "      <td>7.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1690</th>\n",
        "      <td>default</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>142</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>8.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1691</th>\n",
        "      <td>default</td>\n",
-       "      <td>core</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>socket</td>\n",
+       "      <td>142</td>\n",
+       "      <td>2048</td>\n",
+       "      <td>12.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Algorithm Allocation  Processes  MessageSize  Avg Latency(us)\n",
-       "0   default       core          2            1             0.16\n",
-       "1   default       core          2            2             0.16\n",
-       "2   default       core          2            4             0.16\n",
-       "3   default       core          2            8             0.15\n",
-       "4   default       core          2           16             0.16"
+       "     Algorithm Allocation  Processes  MessageSize  Avg Latency(us)\n",
+       "1687   default     socket        142          128          6037.40\n",
+       "1688   default     socket        142          256             7.04\n",
+       "1689   default     socket        142          512             7.55\n",
+       "1690   default     socket        142         1024             8.15\n",
+       "1691   default     socket        142         2048            12.01"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +586,9 @@
     "# Merge the data\n",
     "default = pd.concat([default_core, default_socket, default_node])\n",
     "\n",
-    "default.head()"
+    "default.head()\n",
+    "default.tail()\n",
+    "default_socket.tail()"
    ]
   },
   {
